tests/unit_tests/mesh/snapshots/unit__unit_tests__mesh__refinement__uniform_refinement_tri3d2-2.snap
---
source: tests/unit_tests/mesh/refinement.rs
expression: refined0
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
        ],
        [
            1.0,
            0.0,
        ],
        [
            2.0,
            -1.0,
        ],
        [
            2.5,
            1.5,
        ],
        [
            1.2,
            1.0,
        ],
        [
            0.0,
            1.3,
        ],
    ],
    connectivity: [
        Tri3d2Connectivity(
            [
                0,
                1,
                5,
            ],
        ),
        Tri3d2Connectivity(
            [
                1,
                2,
                3,
            ],
        ),
        Tri3d2Connectivity(
            [
                3,
                4,
                1,
            ],
        ),
        Tri3d2Connectivity(
            [
                1,
                4,
                5,
            ],
        ),
    ],
}
