tests/unit_tests/mesh/snapshots/unit__unit_tests__mesh__refinement__uniform_refinement_tri3d2-4.snap
---
source: tests/unit_tests/mesh/refinement.rs
expression: refined2
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
        ],
        [
            0.25,
            0.0,
        ],
        [
            0.0,
            0.325,
        ],
        [
            0.5,
            0.0,
        ],
        [
            0.25,
            0.325,
        ],
        [
            0.0,
            0.65,
        ],
        [
            0.75,
            0.0,
        ],
        [
            0.5,
            0.325,
        ],
        [
            1.0,
            0.0,
        ],
        [
            0.75,
            0.325,
        ],
        [
            0.5,
            0.65,
        ],
        [
            0.25,
            0.65,
        ],
        [
            0.0,
            0.9750000000000001,
        ],
        [
            0.25,
            0.9750000000000001,
        ],
        [
            0.0,
            1.3,
        ],
        [
            1.25,
            -0.25,
        ],
        [
            1.375,
            0.375,
        ],
        [
            1.5,
            -0.5,
        ],
        [
            1.625,
            0.125,
        ],
        [
            1.75,
            0.75,
        ],
        [
            1.75,
            -0.75,
        ],
        [
            1.875,
            -0.125,
        ],
        [
            2.0,
            -1.0,
        ],
        [
            2.125,
            -0.375,
        ],
        [
            2.25,
            0.25,
        ],
        [
            2.0,
            0.5,
        ],
        [
            2.125,
            1.125,
        ],
        [
            2.375,
            0.875,
        ],
        [
            2.5,
            1.5,
        ],
        [
            2.175,
            1.375,
        ],
        [
            1.85,
            1.25,
        ],
        [
            1.8,
            1.0,
        ],
        [
            1.525,
            1.125,
        ],
        [
            1.475,
            0.875,
        ],
        [
            1.2,
            1.0,
        ],
        [
            1.15,
            0.75,
        ],
        [
            1.1,
            0.5,
        ],
        [
            1.425,
            0.625,
        ],
        [
            1.05,
            0.25,
        ],
        [
            0.8,
            0.575,
        ],
        [
            0.8500000000000001,
            0.825,
        ],
        [
            0.8999999999999999,
            1.075,
        ],
        [
            0.6,
            1.15,
        ],
        [
            0.55,
            0.8999999999999999,
        ],
        [
            0.3,
            1.225,
        ],
    ],
    connectivity: [
        Tri3d2Connectivity(
            [
                0,
                1,
                2,
            ],
        ),
        Tri3d2Connectivity(
            [
                1,
                3,
                4,
            ],
        ),
        Tri3d2Connectivity(
            [
                2,
                4,
                5,
            ],
        ),
        Tri3d2Connectivity(
            [
                1,
                4,
                2,
            ],
        ),
        Tri3d2Connectivity(
            [
                3,
                6,
                7,
            ],
        ),
        Tri3d2Connectivity(
            [
                6,
                8,
                9,
            ],
        ),
        Tri3d2Connectivity(
            [
                7,
                9,
                10,
            ],
        ),
        Tri3d2Connectivity(
            [
                6,
                9,
                7,
            ],
        ),
        Tri3d2Connectivity(
            [
                5,
                11,
                12,
            ],
        ),
        Tri3d2Connectivity(
            [
                11,
                10,
                13,
            ],
        ),
        Tri3d2Connectivity(
            [
                12,
                13,
                14,
            ],
        ),
        Tri3d2Connectivity(
            [
                11,
                13,
                12,
            ],
        ),
        Tri3d2Connectivity(
            [
                3,
                7,
                4,
            ],
        ),
        Tri3d2Connectivity(
            [
                7,
                10,
                11,
            ],
        ),
        Tri3d2Connectivity(
            [
                4,
                11,
                5,
            ],
        ),
        Tri3d2Connectivity(
            [
                7,
                11,
                4,
            ],
        ),
        Tri3d2Connectivity(
            [
                8,
                15,
                16,
            ],
        ),
        Tri3d2Connectivity(
            [
                15,
                17,
                18,
            ],
        ),
        Tri3d2Connectivity(
            [
                16,
                18,
                19,
            ],
        ),
        Tri3d2Connectivity(
            [
                15,
                18,
                16,
            ],
        ),
        Tri3d2Connectivity(
            [
                17,
                20,
                21,
            ],
        ),
        Tri3d2Connectivity(
            [
                20,
                22,
                23,
            ],
        ),
        Tri3d2Connectivity(
            [
                21,
                23,
                24,
            ],
        ),
        Tri3d2Connectivity(
            [
                20,
                23,
                21,
            ],
        ),
        Tri3d2Connectivity(
            [
                19,
                25,
                26,
            ],
        ),
        Tri3d2Connectivity(
            [
                25,
                24,
                27,
            ],
        ),
        Tri3d2Connectivity(
            [
                26,
                27,
                28,
            ],
        ),
        Tri3d2Connectivity(
            [
                25,
                27,
                26,
            ],
        ),
        Tri3d2Connectivity(
            [
                17,
                21,
                18,
            ],
        ),
        Tri3d2Connectivity(
            [
                21,
                24,
                25,
            ],
        ),
        Tri3d2Connectivity(
            [
                18,
                25,
                19,
            ],
        ),
        Tri3d2Connectivity(
            [
                21,
                25,
                18,
            ],
        ),
        Tri3d2Connectivity(
            [
                28,
                29,
                26,
            ],
        ),
        Tri3d2Connectivity(
            [
                29,
                30,
                31,
            ],
        ),
        Tri3d2Connectivity(
            [
                26,
                31,
                19,
            ],
        ),
        Tri3d2Connectivity(
            [
                29,
                31,
                26,
            ],
        ),
        Tri3d2Connectivity(
            [
                30,
                32,
                33,
            ],
        ),
        Tri3d2Connectivity(
            [
                32,
                34,
                35,
            ],
        ),
        Tri3d2Connectivity(
            [
                33,
                35,
                36,
            ],
        ),
        Tri3d2Connectivity(
            [
                32,
                35,
                33,
            ],
        ),
        Tri3d2Connectivity(
            [
                19,
                37,
                16,
            ],
        ),
        Tri3d2Connectivity(
            [
                37,
                36,
                38,
            ],
        ),
        Tri3d2Connectivity(
            [
                16,
                38,
                8,
            ],
        ),
        Tri3d2Connectivity(
            [
                37,
                38,
                16,
            ],
        ),
        Tri3d2Connectivity(
            [
                30,
                33,
                31,
            ],
        ),
        Tri3d2Connectivity(
            [
                33,
                36,
                37,
            ],
        ),
        Tri3d2Connectivity(
            [
                31,
                37,
                19,
            ],
        ),
        Tri3d2Connectivity(
            [
                33,
                37,
                31,
            ],
        ),
        Tri3d2Connectivity(
            [
                8,
                38,
                9,
            ],
        ),
        Tri3d2Connectivity(
            [
                38,
                36,
                39,
            ],
        ),
        Tri3d2Connectivity(
            [
                9,
                39,
                10,
            ],
        ),
        Tri3d2Connectivity(
            [
                38,
                39,
                9,
            ],
        ),
        Tri3d2Connectivity(
            [
                36,
                35,
                40,
            ],
        ),
        Tri3d2Connectivity(
            [
                35,
                34,
                41,
            ],
        ),
        Tri3d2Connectivity(
            [
                40,
                41,
                42,
            ],
        ),
        Tri3d2Connectivity(
            [
                35,
                41,
                40,
            ],
        ),
        Tri3d2Connectivity(
            [
                10,
                43,
                13,
            ],
        ),
        Tri3d2Connectivity(
            [
                43,
                42,
                44,
            ],
        ),
        Tri3d2Connectivity(
            [
                13,
                44,
                14,
            ],
        ),
        Tri3d2Connectivity(
            [
                43,
                44,
                13,
            ],
        ),
        Tri3d2Connectivity(
            [
                36,
                40,
                39,
            ],
        ),
        Tri3d2Connectivity(
            [
                40,
                42,
                43,
            ],
        ),
        Tri3d2Connectivity(
            [
                39,
                43,
                10,
            ],
        ),
        Tri3d2Connectivity(
            [
                40,
                43,
                39,
            ],
        ),
    ],
}
