tests/unit_tests/mesh/snapshots/unit__unit_tests__mesh__refinement__uniform_refinement_tri3d2.snap
---
source: tests/unit_tests/mesh/refinement.rs
expression: refined_once
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
        ],
        [
            0.5,
            0.0,
        ],
        [
            0.0,
            0.65,
        ],
        [
            1.0,
            0.0,
        ],
        [
            0.5,
            0.65,
        ],
        [
            0.0,
            1.3,
        ],
        [
            1.5,
            -0.5,
        ],
        [
            1.75,
            0.75,
        ],
        [
            2.0,
            -1.0,
        ],
        [
            2.25,
            0.25,
        ],
        [
            2.5,
            1.5,
        ],
        [
            1.85,
            1.25,
        ],
        [
            1.2,
            1.0,
        ],
        [
            1.1,
            0.5,
        ],
        [
            0.6,
            1.15,
        ],
    ],
    connectivity: [
        Tri3d2Connectivity(
            [
                0,
                1,
                2,
            ],
        ),
        Tri3d2Connectivity(
            [
                1,
                3,
                4,
            ],
        ),
        Tri3d2Connectivity(
            [
                2,
                4,
                5,
            ],
        ),
        Tri3d2Connectivity(
            [
                1,
                4,
                2,
            ],
        ),
        Tri3d2Connectivity(
            [
                3,
                6,
                7,
            ],
        ),
        Tri3d2Connectivity(
            [
                6,
                8,
                9,
            ],
        ),
        Tri3d2Connectivity(
            [
                7,
                9,
                10,
            ],
        ),
        Tri3d2Connectivity(
            [
                6,
                9,
                7,
            ],
        ),
        Tri3d2Connectivity(
            [
                10,
                11,
                7,
            ],
        ),
        Tri3d2Connectivity(
            [
                11,
                12,
                13,
            ],
        ),
        Tri3d2Connectivity(
            [
                7,
                13,
                3,
            ],
        ),
        Tri3d2Connectivity(
            [
                11,
                13,
                7,
            ],
        ),
        Tri3d2Connectivity(
            [
                3,
                13,
                4,
            ],
        ),
        Tri3d2Connectivity(
            [
                13,
                12,
                14,
            ],
        ),
        Tri3d2Connectivity(
            [
                4,
                14,
                5,
            ],
        ),
        Tri3d2Connectivity(
            [
                13,
                14,
                4,
            ],
        ),
    ],
}
